--- a/Project.html
+++ b/Project.html
@@ -11,135 +11,131 @@
 </head>
 <body>
 	<h1>Hi</h1>
-	<div>
+	<div class="">
 		<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 		<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 		<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
+	<div class="">
 				<button></button>
 		<input type="" name="">
 	</div>
-	<div>
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div>
+	<div class="keys">
 				<button></button>
 		<input type="" name="">
 	</div>
