--- a/Project.html
+++ b/Project.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="Project.js"></script>
 </head>
 <body>
+	<img src="https://www.netclipart.com/pp/m/123-1235981_new-rock-paper-scissors-thanks-to-karmachela-rock.png">
 	<h1>Hi</h1>
 	<div class="">
 		<button></button>
@@ -32,110 +33,6 @@
 		<input type="" name="">
 	</div>
 	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-		<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-		<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="">
-				<button></button>
-		<input type="" name="">
-	</div>
-	<div class="keys">
 				<button></button>
 		<input type="" name="">
 	</div>
