--- a/Project.html
+++ b/Project.html
@@ -5,13 +5,13 @@
   	src="https://code.jquery.com/jquery-3.4.1.js"
   	integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   	crossorigin="anonymous"></script>
-	<title>Solo-Project</title>
+	<title>Rock Paper Scissors</title>
 	<link rel="stylesheet" type="text/css" href="Project.css">
 	<script type="text/javascript" src="Project.js"></script>
 </head>
 <body>
 	<img src="https://www.netclipart.com/pp/m/123-1235981_new-rock-paper-scissors-thanks-to-karmachela-rock.png">
-	<h1>Hi</h1>
+	<h1>Rock Paper Scissors</h1>
 	<div class="">
 		<button></button>
 		<input type="" name="">
