--- a/Project.html
+++ b/Project.html
@@ -4,7 +4,7 @@
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous">$('body').css("background-color", 'red');</script>
+  crossorigin="anonymous"></script>
 	<title>Rock Paper Scissors</title>
 	<link rel="stylesheet" type="text/css" href="Project.css">
 </head>
