--- a/Project.html
+++ b/Project.html
@@ -15,12 +15,11 @@
 	<div class="result" id="userResult"></div>
 	<div class="result" id="computerResult"></div>
 	<div class="result" id="finalresult"></div>
+	<div class="result" id="result"></div>
 	<div class="moves">
 		<button id="rock">Rock</button>
 		<button id="paper">Paper</button>
 		<button id="scissors">Scissors</button>
-	</div>
-	<div>
 		<button id="reset">Reset</button>
 	</div>
 	</center>
