--- a/Project.html
+++ b/Project.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<center>
-	<img src="logo.png">
+	<img id="logo" src="logo.png">
 	<h1>Rock Paper Scissors</h1>
 	<div class="result" id="userResult"></div>
 	<div class="result" id="computerResult"></div>
