--- a/Project.html
+++ b/Project.html
@@ -17,12 +17,12 @@
 	<div class="result" id="finalresult"></div>
 	<div class="result" id="result"></div>
 	<div>
-		<button class="moves" id="rock" value="rock">Rock</button>
-		<button class="moves" id="paper" value="paper">Paper</button>
-		<button class="moves" id="scissors" value="scissors">Scissors</button>
+		<button class="moves" id="rock" value="rock"><img src="https://sanyogitapandit.github.io/Rock-Paper-Scissor/images/rock.png" alt="rock"></button>
+		<button class="moves" id="paper" value="paper"><img src="https://icon-library.net/images/rock-paper-scissors-icon/rock-paper-scissors-icon-23.jpg" alt="paper"></button>
+		<button class="moves" id="scissors" value="scissors"><img src="https://i-love-png.com/images/477919-200.png" alt="scissors"></button>
 	</div>
 	<div>
-		<button id="reset">Reset</button>
+		<button id="reset"><img src="https://image.winudf.com/v2/image/Y29tLmdjZnVuLnJwc19pY29uXzE1MTM2MTQ5ODhfMDU4/icon.png?w=170&fakeurl=1" alt="reset"></button>
 	</div>
 	</center>
 	<script type="text/javascript" src="Project.js"></script>
